fix: match spacing above/below read more link

--- a/src/Views/Form/Templates/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Templates/Sequoia/assets/css/form.scss
@@ -657,6 +657,10 @@ p {
 		}
 	}
 
+	.give-gift-aid-explanation-content-more-wrap {
+		padding-bottom: 8px;
+	}
+
 	#give_error_invalid_donation_maximum,
 	#give_error_invalid_donation_amount {
 		cursor: pointer;
